# Allergen-Finder

./: .db.env  .env  .gitignore  README.md  docker-compose.yml  requirements.txt
Backend/: Dockerfile  create.py  requirements.txt
Backend/api/: __init__.py  models.py  routes.py
Backend/api/routes/: products.py  users.py
Backend/functions/: productFunctions.py
Backend/tests/: test_base.py  test_product.py  test_search.py  test_user.py
Frontend/: package-lock.json  package.json
Frontend/src/: app.d.ts  hooks.server.ts
Frontend/src/lib/: types.ts
Frontend/src/lib/functions/: RequestMixins.ts
Frontend/src/routes/: +layout.server.ts  +layout.svelte  +page.server.ts  +page.svelte
Frontend/src/routes/login/: +page.server.ts  +page.svelte
Frontend/src/routes/logout/: +page.server.ts
Frontend/src/routes/register/: +page.server.ts  +page.svelte
api/: create.py
api/application/: __init__.py  models.py  routes.py
api/functions/: addToDatabase.py  searchApi.py
api/tests/: test_base.py  test_search.py
backend-rs/: Cargo.toml
backend-rs/migrations/2025-03-03-133420_new-db/: up.sql
backend-rs/src/: main.rs  schema.rs
backend-rs/src/functions/: product.rs
backend-rs/src/models/: api.rs  auth.rs  error.rs  mod.rs  off.rs  product.rs
backend-rs/src/routes/: product.rs
backend-rs/src/utils/: catchers.rs
nginx/: nginx.conf
